Write base code

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     <div class="form">
         <span>Long URL: </span><input type="text"><br>
+        <span>Short URL: </span><span class="newurl"></span><br>
         <button>Generate</button>
     </div>
 
